# upprint

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.in
lprwrap/: Makefile.am  Makefile.in  lprwrap.in
man/: Makefile.am  Makefile.in  lprwrap.1.in  man2html.sed  psdim.1.in  pstops-clip.1.in
psdim/: Makefile.am  Makefile.in  format.c  format.h  main.c  main.h  psdim.c  psdim.h
pstops-clip/: LICENSE  Makefile.am  Makefile.in  psspec.c  psspec.h  pstops-clip.c  psutil.c  psutil.h
rpm/: Makefile.am  Makefile.in  rpm.spec.in
