## Copyright (C) 2001-2012 Peter Selinger.
## This file is part of the upprint package. It is free software and
## is distributed under the terms of the GNU general public license.
## See the file COPYING for details.

## Process this file with automake to produce Makefile.in

bin_PROGRAMS = pstops-clip

pstops_clip_SOURCES = pstops-clip.c psutil.c psutil.h psspec.c	\
 psspec.h pserror.c pserror.h

EXTRA_DIST = LICENSE
